# ChangeLog for dev-cpp/libglademm
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libglademm/ChangeLog,v 1.67 2007/10/17 23:31:57 eva Exp $

  17 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  libglademm-2.2.0.ebuild, libglademm-2.6.3.ebuild, libglademm-2.6.4.ebuild:
  fix quoting

*libglademm-2.6.5 (17 Oct 2007)

  17 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libglademm-2.6.5.ebuild:
  bump to 2.6.5

  14 Oct 2007; Markus Rothe <corsair@gentoo.org> libglademm-2.6.4.ebuild:
  Stable on ppc64; bug #194277

  03 Oct 2007; Raúl Porcel <armin76@gentoo.org> libglademm-2.6.4.ebuild:
  alpha/ia64/sparc stable wrt #194277

  03 Oct 2007; Christoph Mende <angelos@gentoo.org> libglademm-2.6.4.ebuild:
  Stable on amd64 wrt bug #194277

  03 Oct 2007; Jeroen Roovers <jer@gentoo.org> libglademm-2.6.4.ebuild:
  Stable for HPPA (bug #194277).

  02 Oct 2007; Lars Weiler <pylon@gentoo.org> libglademm-2.6.4.ebuild:
  stable ppc, bug #194277

  02 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  libglademm-2.6.4.ebuild:
  stable x86, bug 194277

*libglademm-2.6.4 (11 Aug 2007)

  11 Aug 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +libglademm-2.6.4.ebuild:
  bump to 2.6.4

  10 Jul 2007; Jeroen Roovers <jer@gentoo.org> libglademm-2.6.3.ebuild:
  Stable for HPPA (bug #180420).

  27 Jun 2007; Christoph Mende <angelos@gentoo.org> libglademm-2.6.3.ebuild:
  Stable on amd64

  27 Jun 2007; Raúl Porcel <armin76@gentoo.org> libglademm-2.6.3.ebuild:
  alpha/ia64/x86 stable wrt #180420

  27 Jun 2007; Markus Rothe <corsair@gentoo.org> libglademm-2.6.3.ebuild:
  Stable on ppc64; bug #180420

  27 Jun 2007; Lars Weiler <pylon@gentoo.org> libglademm-2.6.3.ebuild:
  Stable on ppc; bug #180420.

  26 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libglademm-2.6.3.ebuild:
  Stable on sparc wrt #180420

  16 Feb 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  libglademm-2.6.3.ebuild: