@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libglademm/libglademm-2.6.5.ebuild,v 1.1 2007/10/17 23:31:57 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libglademm/libglademm-2.6.5.ebuild,v 1.2 2007/10/24 14:14:48 dang Exp $
 
 inherit gnome2
 
@@ -12,7 +12,7 @@ SLOT="2.4"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sh ~sparc ~x86 ~x86-fbsd"
 IUSE="doc examples"
 
-RDEPEND=">=gnome-base/libglade-2.3.6
+RDEPEND=">=gnome-base/libglade-2.6.1
 	>=dev-cpp/gtkmm-2.6"
 
 DEPEND=">=dev-util/pkgconfig-0.12.0
